--- a/frontend/src/Components/Form.css
+++ b/frontend/src/Components/Form.css
@@ -1,9 +1,9 @@
 .form-container {
-    width: 80%;
-    margin: 20px auto;
+    width: 55%;
+    margin: 0px auto;
     padding: 20px;
     border-radius: 8px;
-    background-color: #f7f9fc;
+    background-color: #96b0d8;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   }
   
@@ -66,5 +66,9 @@
   .btn-submit1 {
     background-color: #2196f3;
     color: white;
+  }
+
+  .form-label {
+    font-weight: bold;
   }
   
