--- a/frontend/src/Components/EmployeeManagementApp.css
+++ b/frontend/src/Components/EmployeeManagementApp.css
@@ -1,3 +1,20 @@
 .highlight {
     color: #f27021; /* Orange highlight for USDA */
 }
+
+.home-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #ed7428;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.home-button:hover {
+    background-color: #d6601d;
+}
