--- a/frontend/src/Components/EmployeeManagementApp.css
+++ b/frontend/src/Components/EmployeeManagementApp.css
@@ -4,17 +4,20 @@
 
 .home-button {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 20px;
     background-color: #ed7428;
-    color: white;
     border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    font-size: 1.2rem;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 25px;
+    font-size: 1rem;
     cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
 }
 
 .home-button:hover {
-    background-color: #d6601d;
+    background-color: #d16322;
+    /* Darker shade on hover */
 }
